Bug 369072 - Regression kMail 5.3.x: Plain-text quoting display is messed up
Summary: Regression kMail 5.3.x: Plain-text quoting display is messed up
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-19 19:06 UTC by Gunter Ohrner
Modified: 2016-10-25 04:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.3.3
Sentry Crash Report:


Attachments
Screenshot with messed-up rendering of quoted text. (No indication of a line's quoting level.) (18.72 KB, image/png)
2016-09-19 19:08 UTC, Gunter Ohrner
Details
Screenshot showing the bug after the 5.3.2 patch. (11.40 KB, image/png)
2016-10-17 10:07 UTC, Gunter Ohrner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gunter Ohrner 2016-09-19 19:06:45 UTC
See screenshot: Quoted text in plain text view is rendered without any indication of how many quotation levels a line is nested.

The following mail text results in the attached screenshot - try to keep an overview over a quoted mail with multiple quotation levels in multiple sections... It's impossible...

The demo-mails content:

Am Montag, 19. September 2016, 21:01:11 CEST schrieb Gunter Ohrner:
> Am Montag, 19. September 2016, 21:00:44 CEST schrieb Gunter Ohrner:
> > Am Montag, 19. September 2016, 21:00:25 CEST schrieb Gunter Ohrner:
> > > Text Level 1
> > 
> > Text Level 2
> 
> Text Level 3

Text Level 4

Reproducible: Always
Comment 1 Gunter Ohrner 2016-09-19 19:08:15 UTC
Created attachment 101186 [details]
Screenshot with messed-up rendering of quoted text. (No indication of a line's quoting level.)
Comment 2 Laurent Montel 2016-10-03 05:20:11 UTC
Git commit cea1557b67d87709091acdae49987e0278a7c384 by Montel Laurent.
Committed on 03/10/2016 at 05:19.
Pushed by mlaurent into branch 'Applications/16.08'.

Fix Bug 369072 - Regression kMail 5.3.x: Plain-text quoting display is messed up

FIXED-IN: 5.3.2

M  +5    -0    messageviewer/src/messagepartthemes/default/defaultrenderer.cpp

http://commits.kde.org/messagelib/cea1557b67d87709091acdae49987e0278a7c384
Comment 3 Gunter Ohrner 2016-10-17 10:06:21 UTC
Unfortunately, the quoted parts still do not look correctly. You still cannot determine the context / quoting levels.
Comment 4 Gunter Ohrner 2016-10-17 10:07:20 UTC
Created attachment 101597 [details]
Screenshot showing the bug after the 5.3.2 patch.
Comment 5 Gunter Ohrner 2016-10-17 10:15:59 UTC
In more detail: The mail is currently displayed as follows:

Am Montag, 19. September 2016, 21:01:11 CEST schrieb Gunter Ohrner:
| Am Montag, 19. September 2016, 21:00:44 CEST schrieb Gunter Ohrner:
| Am Montag, 19. September 2016, 21:00:25 CEST schrieb Gunter Ohrner:
| Text Level 1
Text Level 2
Text Level 3
Text Level 4

This does not really make sense and you still cannot determine that "Text Level 3" is an answer to "Text Level 2", but "Text Level 4" is not, and you also cannot determine that "Text Level 2" belongs to the introduction line from "21:00:44" and "Text Level 3" belongs to the introduction line from "21:01:11".

You cannot even easily see that "Text Level 2" and 3 are quoted but "Text Level 4" is not. (Except possibly due to font face and color, if configured accordingly, which is applied correctly.)

It should look as follows however to make clear which part belongs to what and what part is an answer to which:

Am Montag, 19. September 2016, 21:01:11 CEST schrieb Gunter Ohrner:
| Am Montag, 19. September 2016, 21:00:44 CEST schrieb Gunter Ohrner:
| | Am Montag, 19. September 2016, 21:00:25 CEST schrieb Gunter Ohrner:
| | | Text Level 1
| | Text Level 2
| Text Level 3
Text Level 4
Comment 6 Laurent Montel 2016-10-23 19:22:37 UTC
Git commit c812e79789d6991fc011d8e93b46efec89ac4544 by Montel Laurent.
Committed on 23/10/2016 at 19:21.
Pushed by mlaurent into branch 'Applications/16.08'.

Start to fix quoting display.

Still not perfect.

M  +5    -5    messageviewer/src/messagepartthemes/default/defaultrenderer.cpp

http://commits.kde.org/messagelib/c812e79789d6991fc011d8e93b46efec89ac4544
Comment 7 Laurent Montel 2016-10-24 19:04:16 UTC
Git commit c1d1b7fb6ebeb6c060b172567aa6df9104a6aeed by Montel Laurent.
Committed on 24/10/2016 at 19:03.
Pushed by mlaurent into branch 'master'.

Fix Bug 369072 - Regression kMail 5.3.x: Plain-text quoting display is messed up

FIXED-IN: 3.4.0

M  +2    -2    messageviewer/src/messagepartthemes/default/autotests/quotehtmltest.cpp
M  +0    -1    messageviewer/src/messagepartthemes/default/defaultrenderer.cpp

http://commits.kde.org/messagelib/c1d1b7fb6ebeb6c060b172567aa6df9104a6aeed
Comment 8 Gunter Ohrner 2016-10-24 20:06:51 UTC
I guess you meant version 5.3.4 - not 3.4.0?
Comment 9 Laurent Montel 2016-10-25 04:49:40 UTC
Git commit 9c764eaa3995be89b3bcb94822ec9446d47a9b1c by Montel Laurent.
Committed on 25/10/2016 at 04:49.
Pushed by mlaurent into branch 'Applications/16.08'.

Fix Bug 369072 - Regression kMail 5.3.x: Plain-text quoting display is messed up

FIXED-IN: 3.4.0
(cherry picked from commit c1d1b7fb6ebeb6c060b172567aa6df9104a6aeed)

M  +2    -2    messageviewer/src/messagepartthemes/default/autotests/quotehtmltest.cpp
M  +0    -1    messageviewer/src/messagepartthemes/default/defaultrenderer.cpp

http://commits.kde.org/messagelib/9c764eaa3995be89b3bcb94822ec9446d47a9b1c