Fix Bug 369072 - Regression kMail 5.3.x: Plain-text quoting display is messed up

FIXED-IN: 3.4.0
BUG: 369072
(cherry picked from commit c1d1b7fb6ebeb6c060b172567aa6df9104a6aeed)