messageviewer/src/messagepartthemes/default/defaultrenderer.cpp
@@ -773,7 +773,6 @@ public:
                                            .arg(-1)
                                            .arg(mExpandIconPath);
                                 htmlStr += QLatin1String("</div><br/>");
-                                htmlStr += quoteEnd;
                             }
                         } else {
                             htmlStr += QLatin1String("<div class=\"quotelevelmark\" >");
